k8s/fastapi/fastapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
spec:
  selector:
    app: fastapi
  type: ClusterIP
  ports:
  - name: fastapi-port
    protocol: TCP
    port: 8000
    targetPort: 8000
